fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,7 @@ ul.page-nav {
       height: 60px;
     }
     .nav-subscribe{
-      margin-right: 30px;
+      margin-right: 3px;
     }
     .second-navbar {
       background-color: var(--white);
